Fixed tests, updated AUTHORS and extended README for info on extra options in get_visits template tag

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Jesús Espino García <jespinog@gmail.com>
 Sultan Imanhodjaev <sultan.imanhodjaev@gmail.com>
+Joe Willrich Lutalo <joewillrich@gmail.com>
